--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,6 +21,7 @@
     <!-- test -->
 
     <!-- Contact Form -->
+
     <div class="container" id="contactForm">
         <div class="row justify-content-evenly">
             <div class="col-lg-4">
@@ -46,7 +47,34 @@
                     </div>
                     <button type="submit" class="btn btn-primary" style="text-align: center;">Enviar</button>
                 </form>
+
+     
+            <div class="contactanos">
+                    <h1>Contáctanos</h2>
+                        <p>Envianos un mensaje:</p>
+ 98268f9 (estoy modificando la pagina de contactanos)
             </div>
+            <form>
+                <div class="form-group col-lg-4">
+                    <label for="name">Nombre:</label>
+                    <input 
+                    class="invalid"
+                    placeholder="Ingresa tu nombre"
+                    />
+                    <div class="error-hint">Campo Requerido*</div>
+                </div>
+                <button
+            </form>
+
+
+
+
+
+
+
+
+
+
             <div class="col-lg-4">
                 <p class="standard-p text-center"><strong>En Espresso Café valoramos cada opinión.</strong></p>
                 <p class="standard-p text-center">Tu experiencia nos ayuda a mejorar, por eso te invitamos a
@@ -102,8 +130,9 @@
     <script src="../js/includeComponentes.js"></script>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
-        </script>
-
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script src="contact.js"></script>
 </body>
 
 </html>
