Modificación de los botones de la navbar

--- a/navbar.html
+++ b/navbar.html
@@ -41,7 +41,7 @@
           </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pages/login.html"><button type="button" class="btn-login">Login</button></a>
+            <a class="nav-link" href="/pages/login.html"><button type="button" class="btn-login">Iniciar sesión</button></a>
           </li>
         </ul>
       </div>
