--- a/footer.html
+++ b/footer.html
@@ -22,9 +22,9 @@
             </div>
             <div class="col">
                 <ul class="footer-menu d-flex justify-content-center p-0 m-0">
-                    <li class="list-inline-item"><a href="#">Menú</a></li>
-                    <li class="list-inline-item"><a href="#">Nosotros</a></li>
-                    <li class="list-inline-item"><a href="#">Contáctanos</a></li>
+                    <li class="list-inline-item"><a href="/pages/menu.html">Menú</a></li>
+                    <li class="list-inline-item"><a href="/pages/acercaDe.html">Nosotros</a></li>
+                    <li class="list-inline-item"><a href="/pages/contact.html">Contáctanos</a></li>
                 </ul>
             </div>
         </div>
