--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> Menu</title>
+    <title> Menu2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles-espresso-cafe/menu2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,8 +17,28 @@
 </head>
 
 <body>
+
     <div id="navbar"></div>
-    <a href="menu2.html">menu 2</a>
+    <br>
+    <br>
+    <div class="card" style="width: 18rem;">
+        <div class="card-img-wrapper">
+            <div class="card-img-container">
+                <img src="/assets/latteMacchiato.png" alt="Latte Macchiato" class="card-img">
+                <span class="heart-icon">♡</span>
+            </div>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Latte Macchiato</h5>
+            <p class="card-price">$20.00</p>
+            <a href="/pages/carrito.html" class="btn btn-add">Agregar al carrito</a>
+        </div>
+    </div>
+
+
+
+    <br>
+    <br>
     <div id="footer"></div>
     <script src="../js/includeComponentes.js"></script>
 
