--- a/pages/contact.html
+++ b/pages/contact.html
@@ -77,7 +77,8 @@
             <button type="submit" class="contact-submit-btn">Enviar</button>
           </form>
           <div class="hidden" id="Gracias">
-            Gracias por contactarte con nosotros
+            <p>¡Gracias por contactarte
+              <br> con nosotros!</p>
           </div>
         </div>
 
@@ -135,7 +136,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.854908849491!2d-93.113289!3d17.5144382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ec4d2c81b18b39%3A0xfb85acb60fe56b9f!2sEspresso%20cafe!5e0!3m2!1ses-419!2smx!4v1751432977626!5m2!1ses-419!2smx"
                 width="100%"
                 height="300"
-                style="border: 0"
+                
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
