--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -42,9 +42,11 @@
         </div>
     </div>
 
-//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+<!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-<div class="container">
+    <div id="list-items"></div> <!--Formulario para agregar un nuevo item -->
+
+    <div class="container">
         <h1 class="my-5">New Item</h1>
         <div class="row">
             <div class="col">
@@ -65,8 +67,6 @@
         </div>
     </div>
 
-    <div id="list-items"></div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -77,13 +77,13 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
 
-    <script src="../js/itemController.js"></script>
-    <script src="../js/index.js"></script>
-
+    
     <br>
     <br>
     <div id="footer"></div>
-    <script src="../js/includeComponentes.js"></script>
+    <script src="/js/includeComponentes.js"></script>
+    <script src="/js/itemController.js"></script>
+    <script type="module" src="/js/index.js"></script>
 //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 </body>
