cambios página registro

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="register-form-container">
-            <h1 class="main-title">Regístrate</h1>
+            <h1 class="register-title">Regístrate</h1>
             <form id="registerForm" class="needs-validation" novalidate>
                 <div class="row">
                     <div class="col-md-6 mb-3">
