Agregue main.js y cambie los script

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 
 
   <div id="footer"></div>
+  <script type="module" src="./js/main.js"></script>
+
 </body>
-<script src="../js/includeComponentes.js"></script>
 
 </html>
