--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,6 +19,6 @@
     <div id="navbar"></div>
     <a href="menu2.html">menu 2</a>
     <div id="footer"></div>
-    <script src="../js/includeComponentes.js"></script>
+    <script type="module" src="../js/main.js"></script>
 
 </body>
