--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -19,28 +19,6 @@
 <body>
 
     <div id="navbar"></div>
-    <br>
-    <br>
-
-    <!--contenedor principal de la carta estilos generales-->
-    <div class="card" style="width: 18rem;">
-        <!--Funciona como marco para la iamgen-->
-        <div class="card-img-wrapper">
-            <!--Imagen con fondo dorado o blanco checar cual nos gusta gusta pero esta etiqueta es la que se vera modificada-->
-            <div class="card-img-container">
-                <!--Imagen del productos-->
-                <img src="/assets/latteMacchiato.png" alt="Latte Macchiato" class="card-img">
-                <!--Icono de corazon-->
-                <span class="heart-icon">♡</span>
-            </div>
-        </div>
-        <!--Contenido de la carta, precio, titulo boton-->
-        <div class="card-body">
-            <h5 class="card-title">Latte Macchiato</h5>
-            <p class="card-price">$20.00</p>
-            <a href="/pages/carrito.html" class="btn btn-add">Agregar al carrito</a>
-        </div>
-    </div>
 
 <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
@@ -81,9 +59,8 @@
     <br>
     <br>
     <div id="footer"></div>
-    <script src="/js/includeComponentes.js"></script>
+    <script type="module" src="../js/main.js"></script>
     <script src="/js/itemController.js"></script>
     <script type="module" src="/js/index.js"></script>
-//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 </body>
