--- a/pages/login.html
+++ b/pages/login.html
@@ -9,8 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="navbar"></div>
     <div id="footer"></div>
-    <script src="../js/includeComponentes.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </body>
 </html>
