--- a/pages/registro.html
+++ b/pages/registro.html
@@ -66,7 +66,7 @@
     </div>
 
     <div id="footer"></div>
-    <script src="../js/includeComponentes.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </body>
 
 </html>
