--- a/Administrador/form-producto.html
+++ b/Administrador/form-producto.html
@@ -8,7 +8,9 @@
   <title>Form producto</title>
 </head>
 <body>
- <div class="form-page">
+ <div class="container-fluid form-page d-flex justify-content-center">
+  <div class="w-100 mx-auto px-3" style="max-width: 500px;">
+
   
      <h1 class="form-title">Formulario para agregar productos</h1>
      <div class="form-container"></div>
@@ -57,6 +59,8 @@
 </form>
 </div>
 </div>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/Administrador/js-admin/ItemsController.js"></script>
