cambios en carruseles del home

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
           <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active position-relative" data-bs-interval="3000">
-                <img src="/assets/betza.jpeg" class="d-block w-100" alt="...">
+                <img src="/assets/espresso-cafe1.jpeg" class="d-block w-100" alt="...">
                 <a href="https://pagina1.com"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
                   Ver más
                 </a>
               </div>
               <div class="carousel-item position-relative" data-bs-interval="3000">
-                <img src="/assets/raul.png" class="d-block w-100" alt="...">
+                <img src="/assets/espresso-cafe 2.jpeg" class="d-block w-100" alt="...">
                 <a href="https://pagina2.com"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
                   Ver más
@@ -78,14 +78,14 @@
           <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active position-relative" data-bs-interval="3000">
-                <img src="/assets/Sergio.jpeg" class="d-block w-100" alt="...">
+                <img src="/assets/espreso-cafe 3.jpeg" class="d-block w-100" alt="...">
                 <a href="https://pagina3.com"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3 ">
                   Ver Más
                 </a>
               </div>
               <div class="carousel-item position-relative" data-bs-interval="3000">
-                <img src="/assets/alan.jpg" class="d-block w-100" alt="...">
+                <img src="/assets/espresso-cafe4.jpeg" class="d-block w-100" alt="...">
                 <a href="https://pagina4.com"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
                   Ver más
