cambie el nombre a la carpeta de fotos y modifique la foto del banner de home

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,7 +83,7 @@
         </div>
 
         <!-- Columna derecha: Información + Redes + Mapa -->
-        <div class="col-lg-6">
+        <div class="col-lg-6 mb-5 mt-5">
           <p class="standard-p text-center">
             <strong>En Espresso Café valoramos cada opinión.</strong>
           </p>
