agregue menu1 y moví las imagenes de nosotros a carpetas

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -129,7 +129,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/alan.jpg" alt="Alan" />
+              <img src="/assets/equipo/alan.jpg" alt="Alan" />
             </div>
             <h3 class="names-team mt-5">Alan Bañuelos</h3>
             <p class="description-team">
@@ -150,7 +150,7 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/AKRC.jpg" alt="AKRC" />
+              <img src="/assets/equipo/AKRC.jpg" alt="AKRC" />
             </div>
             <h3 class="names-team mt-5">Karim Rangel</h3>
             <p class="description-team">
@@ -170,11 +170,11 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/betza.jpeg" alt="Betzabet" />
+              <img src="/assets/equipo/betza.jpeg" alt="Betzabet" />
             </div>
             <h3 class="names-team mt-5">Betzabet Mera</h3>
             <p class="description-team">
-              Hola,soy Desarrolladora Full Stack con formación en Ingeniería
+              Soy Desarrolladora Full Stack con formación en Ingeniería
               Biomédica. Mi formación en biomédica ha fortalecido mi capacidad
               para abordar problemas complejos con metodología y precisión,
               habilidades que aplico transversalmente al desarrollo de
@@ -195,7 +195,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/raul.png" alt="Raúl" />
+              <img src="/assets/equipo/raul.png" alt="Raúl" />
             </div>
 
             <h3 class="names-team mt-5">Raúl Maldonado</h3>
@@ -214,7 +214,7 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/ricardo.jpeg" alt="Ricardo" />
+              <img src="/assets/equipo/ricardo.jpeg" alt="Ricardo" />
             </div>
             <h3 class="names-team mt-5">Ricardo González</h3>
             <p class="description-team">
@@ -230,7 +230,7 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/Sergio.jpeg" alt="Sergio" />
+              <img src="/assets/equipo/Sergio.jpeg" alt="Sergio" />
             </div>
             <h3 class="names-team mt-5">Sergio Morales</h3>
             <p class="description-team">
@@ -253,7 +253,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/viviano (1).jpg" alt="Viviano" />
+              <img src="/assets/equipo/viviano (1).jpg" alt="Viviano" />
             </div>
             <h3 class="names-team mt-5">Viviano Pérez</h3>
             <p class="description-team">
