--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,28 +19,54 @@
 <body>
     <div id="navbar"></div>
     <a href="menu2.html">menu 2</a>
-    <h2 class="titulos-menu1">Alimentos</h2>
-    <div class="circle-buttons">
-        <a href="menu2.html" class="circle-btn">
-            <img src="#" alt="Desayunos">
-        </a>
-        <a href="menu2.html" class="circle-btn">
-            <img src="" alt="Especiales">
-        </a>
+    
+   <div class="menu-section">
+        <h2>Alimentos</h2>
+        <div class="buttons-container">
+            <div class="button-group">
+                <a href="menu2.html" class="circle-btn">
+                    <img src="/assets/Bowl.png" alt="Extras">
+                </a>
+                <h3>Desayunos</h3>
+            </div>
+            <div class="button-group">
+                <a href="menu2.html" class="circle-btn">
+                    <img src="/assets/bagelsalmon.png" alt="Extras">
+                </a>
+                <h3>Especiales</h3>
+            </div>
+            <div class="button-group">
+                <a href="menu2.html" class="circle-btn">
+                    <img src="/assets/Extras.png" alt="Extras">
+                </a>
+                <h3>Extras</h3>
+            </div>
+        </div>
     </div>
-
-    <h3>Desayunos</h3>
-    <h3>Especiales</h3>
-    <h2 class="titulos-menu1">Bebidas</h2>
-    <div class="circle-buttons">
-        <a href="menu2.html" class="circle-btn">
-            <img src="#" alt="Bebidas calientes">
-        </a>
-        <a href="menu2.html" class="circle-btn">
-            <img src="" alt="Bebidas frias">
-        </a>
+    
+    <div class="menu-section">
+        <h2>Bebidas</h2>
+        <div class="buttons-container">
+            <div class="button-group">
+                <a href="menu2.html" class="circle-btn">
+                    <img src="/assets/Bebidas calientes.png" alt="Extras">
+                </a>
+                <h3>Bebidas calientes</h3>
+            </div>
+            <div class="button-group">
+                <a href="menu2.html" class="circle-btn">
+                    <img src="/assets/bebidafria.png" alt="Extras">
+                </a>
+                <h3>Bebidas frías</h3>
+            </div>
+            <div class="button-group">
+                <a href="menu2.html" class="circle-btn">
+                    <img src="/assets/especialesB.png" alt="Extras">
+                </a>
+                <h3>Especiales</h3>
+            </div>
+        </div>
     </div>
-
     <div id="footer"></div>
     <script type="module" src="../js/main.js"></script>
 
