--- a/pages/menu.html
+++ b/pages/menu.html
@@ -18,6 +18,7 @@
 <body>
     <div id="navbar"></div>
     <a href="menu2.html">menu 2</a>
+    <a href="menu3.html">menu 3</a>
     <div id="footer"></div>
     <script type="module" src="../js/main.js"></script>
 
