--- a/pages/menu3.html
+++ b/pages/menu3.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="/styles-espresso-cafe/menu2.css">
-    <title>Alimentos</title>
+    <title>Bebidas</title>
 </head>
 <body>
     <div id="navbar"></div>
