Colocque el boton de ordena ahora y enalace al menu 2

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       <div class="mainBanner">
         <div class="homeTitle">
           <h1 class="home-main-title">Deja que el café nos conecte</h1>
+          <a href="/pages/menu2.html" 
+       class="general-green-button letras position-absolute bottom-0 start-0 m-4 d-flex align-items-center shadow">
+      <i class="fas fa-mug-hot me-2"></i>
+      Ordena Ahora
+    </a>
         </div>
       </div>
     </div>
