--- a/pages/login.html
+++ b/pages/login.html
@@ -21,11 +21,12 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="login-container">
     <div id="navbar"></div>
 
-    <div class="container mt-3">
+    <div class="container mt-3" id= "login-items">
       <div class="row justify-content-evenly">
-        <div class="col 6">
+        <div class="col-6">
           <h1 class="main-title">Bienvenido</h1>
 
           <!--Formulario-->
@@ -110,7 +111,7 @@
     </div>
 
     <div id="footer"></div>
-
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
       integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
