--- a/pages/menu.html
+++ b/pages/menu.html
@@ -24,19 +24,19 @@
         <div class="buttons-container">
             <div class="button-group">
                 <a href="menu2.html?tipo=alimentos&categoria=Desayunos" class="circle-btn">
-                    <img src="/assets/Bowl.png" alt="Desayunos">
+                    <img src="/assets/menuItems/Bowl.png" alt="Desayunos">
                 </a>
                 <h3>Desayunos</h3>
             </div>
             <div class="button-group">
                 <a href="menu2.html?tipo=alimentos&categoria=Especiales" class="circle-btn">
-                    <img src="/assets/bagelsalmon.png" alt="Especiales">
+                    <img src="/assets/menuItems/bagelsalmon.png" alt="Especiales">
                 </a>
                 <h3>Especiales</h3>
             </div>
             <div class="button-group">
                 <a href="menu2.html?tipo=alimentos&categoria=Extras" class="circle-btn">
-                    <img src="/assets/Extras.png" alt="Extras">
+                    <img src="/assets/menuItems/Extras.png" alt="Extras">
                 </a>
                 <h3>Extras</h3>
             </div>
@@ -48,7 +48,7 @@
         <div class="buttons-container">
             <div class="button-group">
                 <a href="menu2.html?tipo=bebidas&categoria=Calientes" class="circle-btn">
-                    <img src="/assets/Bebidas calientes.png" alt="Bebidas calientes">
+                    <img src="/assets/menuItems/Bebidas calientes.png" alt="Bebidas calientes">
 
                 </a>
                 <h3>Bebidas calientes</h3>
@@ -56,7 +56,7 @@
             <div class="button-group">
 
                 <a href="menu2.html?tipo=bebidas&categoria=Frias" class="circle-btn">
-                    <img src="/assets/bebidafria.png" alt="Bebidas frías">
+                    <img src="/assets/menuItems/bebidafria.png" alt="Bebidas frías">
 
                 </a>
                 <h3>Bebidas frías</h3>
@@ -64,7 +64,7 @@
             <div class="button-group">
 
                 <a href="menu2.html?tipo=bebidas&categoria=Especiales" class="circle-btn">
-                    <img src="/assets/especialesB.png" alt="Bebidas especiales">
+                    <img src="/assets/menuItems/especialesB.png" alt="Bebidas especiales">
 
                 </a>
                 <h3>Especiales</h3>
