--- a/pages/menu.html
+++ b/pages/menu.html
@@ -66,8 +66,10 @@
             </div>
         </div>
     </div>
+    </div>
     <div id="menu-container" class="container my-5"></div> 
     <div id="footer"></div>
     <script type="module" src="../js/main.js"></script>
 
 </body>
+</html>
