--- a/footer.html
+++ b/footer.html
@@ -4,13 +4,13 @@
             <div class="col">
                 <ul class="social-media-icons d-flex justify-content-center p-0 m-0">
                     <li class="list-inline-item">
-                        <a href="https://web.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://api.whatsapp.com/send?phone=5219322038404&text&context=AfeF2gVBsgQcZuLuCe6xiu6kPLNccCPQw8bX-rut8LikUmiRiglb7prbvDqH7Mv2zU3yp6W9uTrH_4aaMU76wqS1m1swXjMnCTjBjajAjNwsl6BfduVBeLIazC7cv2OJ-tV0bDsTGuUfdwu3T-OlcOBUgg&source&app=facebook" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/espressocafe10/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61576385543112" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://www.x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
