--- a/pages/menu.html
+++ b/pages/menu.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title> Menu</title>
+    <title>Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
@@ -13,12 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
     <div id="navbar"></div>
 
+    <!-- MENÚ PRINCIPAL -->
     <div class="menu-section">
         <h2>Alimentos</h2>
         <div class="buttons-container">
@@ -42,42 +41,59 @@
             </div>
         </div>
     </div>
-<br>
-<br>
-<br>
-<br>
+
+    <br><br><br><br>
+
     <div class="menu-section">
         <h2>Bebidas</h2>
         <div class="buttons-container">
             <div class="button-group">
                 <a href="menu2.html?tipo=bebidas&categoria=Calientes" class="circle-btn">
                     <img src="/assets/menuItems/Bebidas calientes.png" alt="Bebidas calientes">
-
                 </a>
                 <h3>Bebidas calientes</h3>
             </div>
             <div class="button-group">
-
                 <a href="menu2.html?tipo=bebidas&categoria=Frias" class="circle-btn">
                     <img src="/assets/menuItems/bebidafria.png" alt="Bebidas frías">
-
                 </a>
                 <h3>Bebidas frías</h3>
             </div>
             <div class="button-group">
-
                 <a href="menu2.html?tipo=bebidas&categoria=Especiales" class="circle-btn">
                     <img src="/assets/menuItems/especialesB.png" alt="Bebidas especiales">
-
                 </a>
                 <h3>Especiales</h3>
             </div>
         </div>
     </div>
+
+    <br><br><br>
+
+    <!-- BLOQUE SOLO PARA ADMINISTRADOR -->
+    <div class="container my-5">
+        <h3 class="text-danger">Panel del Administrador</h3>
+        <p>Accesos rápidos para editar o eliminar productos:</p>
+        <div class="d-grid gap-2">
+            <a href="menu2.html?tipo=alimentos&categoria=Desayunos&admin=true" class="btn btn-warning">
+                Desayunos (Admin)
+            </a>
+            <a href="menu2.html?tipo=alimentos&categoria=Especiales&admin=true" class="btn btn-warning">
+                Especiales (Admin)
+            </a>
+            <a href="menu2.html?tipo=bebidas&categoria=Calientes&admin=true" class="btn btn-warning">
+                Bebidas Calientes (Admin)
+            </a>
+            <a href="menu2.html?tipo=bebidas&categoria=Frias&admin=true" class="btn btn-warning">
+                Bebidas Frías (Admin)
+            </a>
+            <a href="menu2.html?tipo=bebidas&categoria=Especiales&admin=true" class="btn btn-warning">
+                Bebidas Especiales (Admin)
+            </a>
+        </div>
     </div>
-    <div id="menu-container" class="container my-5"></div> 
+
     <div id="footer"></div>
     <script type="module" src="../js/main.js"></script>
-
 </body>
 </html>
