footer anclado al fondo

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -18,7 +18,7 @@
 
   <div id="navbar"></div>
 
-
+<main>
   <h1 class="main-title">Sobre Nosotros</h1>
   <!--Sección nuestro manifiesto-->
   <section class="container-fluid">
@@ -281,7 +281,7 @@
       </div>
     </section>
   </section>
-
+</main>
 
 
 
