--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,6 +21,7 @@
   <body>
     <div id="navbar"></div>
 
+    <main>
     <!-- Contacto en columnas -->
     <div class="container mt-5 mb-5">
       <div class="row justify-content-center align-items-start">
@@ -147,6 +148,7 @@
         </div>
       </div>
     </div>
+    </main>
 
     <!-- Footer -->
     <footer id="footer"></footer>
