--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -10,7 +10,16 @@
 </head>
 <body>
     <div id="navbar"></div>
+    <main>
+
+
+
+        
+    </main>
     <div id="footer"></div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
     <script type="module" src="../js/main.js"></script>
 
 </body>
