--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="navbar"></div>
-
+<main>
     <!-- MENÚ PRINCIPAL -->
     <div class="menu-section">
         <h2>Alimentos</h2>
@@ -40,8 +40,6 @@
             </div>
         </div>
     </div>
-
-    <br><br><br><br>
 
     <div class="menu-section">
         <h2>Bebidas</h2>
@@ -91,8 +89,11 @@
             </a>
         </div>
     </div>
+    </main>
     <div id="menu-container" class="container my-5"></div> 
     <div id="footer"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
     <script type="module" src="../js/main.js"></script>
 </body>
 </html>
