--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -12,11 +12,14 @@
 <body>
     <div id="navbar"></div>
 
+<main>
     <div id="menu-container" class="container my-5"></div>
+
+    </main>
     
     <div id="footer"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
     <script type="module" src="../js/main.js"></script>
 </body>
 </html>
