--- a/pages/registro.html
+++ b/pages/registro.html
@@ -112,7 +112,7 @@
         </form>
 
         <p class="p-login">
-          ¿Ya tienes cuenta? <a href="#" class="login">Inicia sesión</a>
+          ¿Ya tienes cuenta? <a href="/pages/login.html" class="login">Inicia sesión</a>
         </p>
       </div>
     </div>
