--- a/pages/login.html
+++ b/pages/login.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -16,39 +21,42 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Tus hojas de estilo -->
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/styles-espresso-cafe/login.css" />
-    <title>Document</title>
   </head>
   <body>
-    <div class="col-12" id="login-container">
-      <div id="navbar"></div>
-
-      <div class="container mt-3" id="login-items">
-        <div class="row justify-content-evenly">
-          <div class="col-6">
+    <!-- NAVBAR -->
+    <div id="navbar"></div>
+    <!-- CONTENEDOR DE LOGIN -->
+    <div id="login-container">
+      <div id="login-items">
+        <div class="justify-content-evenly">
+          <div class="col-12">
             <h1 class="main-title">Bienvenido</h1>
-
             <!--Formulario-->
-            <div class="form-container">
+            <div class="form-container justify-content-evenly">
               <form id="login-form">
                 <p class="p-login">
                   ¿No tienes cuenta?.
                   <a href="/pages/registro.html" class="a-login">Regístrate</a>
                 </p>
-                <div class="mb-3">
-                  <label for="correo" class="form-label">Correo</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    aria-describedby="emailHelp"
-                  />
-                </div>
-                <div class="mb-3">
-                  <label for="contraseña" class="form-label">Contraseña</label>
-                  <input type="password" class="form-control" id="password" />
-                </div>
+<div class="mb-3">
+  <label for="email" class="form-label">Correo</label>
+  <input
+    type="email"
+    class="form-control"
+    id="email"
+    aria-describedby="emailHelp"
+  />
+</div>
+
+<div class="mb-3">
+  <label for="password" class="form-label">Contraseña</label>
+  <input type="password" class="form-control" id="password" />
+</div>
+
                 <div
                   class="invalid-feedback d-block"
                   id="loginError"
@@ -56,6 +64,7 @@
                 >
                   <!-- Aquí aparecerán los mensajes de error -->
                 </div>
+
                 <div
                   class="mb-3 d-flex justify-content-between align-items-center"
                 >
@@ -78,46 +87,20 @@
               </form>
             </div>
           </div>
-
-          <div class="col-6">
-            <div class="image-social-wrapper">
-              <img
-                src="/assets/logo-verde.png"
-                alt="logo verde"
-                class="main-logo"
-              />
-              <div class="social-icons">
-                <ul>
-                  <li>
-                    <a href="#"
-                      ><i class="fa-brands fa-instagram login-icons"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fa-brands fa-facebook login-icons"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fa-brands fa-whatsapp login-icons"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
-
-      <div id="footer"></div>
     </div>
+    
+    <!-- FOOTER -->
+    <div id="footer"></div>
+
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
       integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
     <script src="/js/login.js"></script>
   </body>
 </html>
