cambios responsividad registro

--- a/pages/login.html
+++ b/pages/login.html
@@ -30,6 +30,7 @@
     <!-- NAVBAR -->
     <div id="navbar"></div>
     <!-- CONTENEDOR DE LOGIN -->
+     <main>
     <div id="login-container">
       <div id="login-items">
         <div class="justify-content-evenly">
@@ -42,20 +43,20 @@
                   ¿No tienes cuenta?.
                   <a href="/pages/registro.html" class="a-login">Regístrate</a>
                 </p>
-<div class="mb-3">
-  <label for="email" class="form-label">Correo</label>
-  <input
-    type="email"
-    class="form-control"
-    id="email"
-    aria-describedby="emailHelp"
-  />
-</div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Correo</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    aria-describedby="emailHelp"
+                  />
+                </div>
 
-<div class="mb-3">
-  <label for="password" class="form-label">Contraseña</label>
-  <input type="password" class="form-control" id="password" />
-</div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Contraseña</label>
+                  <input type="password" class="form-control" id="password" />
+                </div>
 
                 <div
                   class="invalid-feedback d-block"
@@ -90,7 +91,7 @@
         </div>
       </div>
     </div>
-    
+</main>
     <!-- FOOTER -->
     <div id="footer"></div>
 
