--- a/pages/registro.html
+++ b/pages/registro.html
@@ -24,14 +24,13 @@
   <body>
     <div id="navbar"></div>
 
+    <main>
+
     <div class="register-wrapper">
-      <div class="register-image d-none d-md-block">
-        <img
-          src="/assets/imagen-registro.jpeg"
-          alt="registro"
-          class="image-register"
-        />
-      </div>
+  <div class="register-image">
+    <img src="/assets/imagen-registro.jpeg" alt="registro" class="image-register" />
+  </div>
+
 
       <div class="register-form-container">
         <h1 class="register-title">Regístrate</h1>
@@ -116,6 +115,7 @@
         </p>
       </div>
     </div>
+    </main>
 
     <div id="footer"></div>
 
