--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="homeTitle">
           <h1 class="home-main-title">Deja que el café nos conecte</h1>
           <a href="/pages/menu.html" 
-       class="button-ordena-ahora position-absolute bottom-0 start-0 m-4 d-flex align-items-center shadow">
+       class="button-ordena-ahora ">
       <i class="fas fa-mug-hot me-2"></i>
       Ordena Ahora
     </a>
@@ -55,7 +55,7 @@
               <div class="carousel-item active position-relative" data-bs-interval="3000">
                 <img src="/assets/espresso-cafe1.jpeg" class="d-block w-100" alt="...">
                 <div class="position-absolute bottom-50 start-50 translate-middle-x mb-5 z-2">
-    <p class="text-white bg-dark bg-opacity-75 px-3 py-2 rounded mb-2 text-center">
+    <p class="text-white ">
       Términos y condiciones
     </p>
   </div>
