Boton y linkear a Menu y  a Nostros

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </div>
               <div class="carousel-item position-relative" data-bs-interval="3000">
                 <img src="/assets/espresso-cafe 2.jpeg" class="d-block w-100" alt="...">
-                 <a href="https://pagina2.com"
+                 <a href="/pages/menu.html"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
                   Ver más
                 </a>
@@ -89,14 +89,14 @@
             <div class="carousel-inner">
               <div class="carousel-item active position-relative" data-bs-interval="3000">
                 <img src="/assets/espreso-cafe 3.jpeg" class="d-block w-100" alt="...">
-                <a href="https://pagina3.com"
+                <a href="/pages/acercaDe.html"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3 ">
                   Ver Más
                 </a>
               </div>
               <div class="carousel-item position-relative" data-bs-interval="3000">
                 <img src="/assets/espresso-cafe4.jpeg" class="d-block w-100" alt="...">
-                <a href="https://pagina4.com"
+                <a href="/pages/acercaDe.html"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
                   Ver más
                 </a>
