--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -225,8 +225,8 @@
               entornos de formación donde desarrollé proyectos tecnológicos,
               aplicando tanto habilidades técnicas como blandas.
             </p>
-            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team"></i></a>
-            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
+            <a href="https://github.com/Ricardo44-44" target="_blank"><i class="fa-brands fa-github icons-team"></i></a>
+            <a href="https://www.linkedin.com/in/ricardo-gonz%C3%A1lez-morales-54a292245/" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
