--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <div class="carousel-inner">
               <div class="carousel-item active position-relative" data-bs-interval="3000">
                 <img src="/assets/espresso-cafe1.jpeg" class="d-block w-100" alt="...">
-                <div class="position-absolute bottom-50 start-50 translate-middle-x mb-5 z-2">
-    <p class="text-white ">
-      Términos y condiciones
-    </p>
-  </div>
-                <a href="https://pagina1.com"
+                <div class="text-over-button position-absolute bottom-50 start-50 translate-middle-x mb-2 ">
+                  <p class="text-white ">
+                   Terminos y condiciones
+                  </p>
+                </div>    
+                <a href="/pages/registro.html"
                   class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
                   Ver más
                 </a>
