--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -18,6 +18,42 @@
     </main>
     
     <div id="footer"></div>
+    <!-- Modal Editar Producto -->
+    <div class="modal fade" id="modalEditar" tabindex="-1" aria-labelledby="modalEditarLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="formEditarProducto">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalEditarLabel">Editar Producto</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="nombreProducto" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombreProducto" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="descripcionProducto" class="form-label">Descripción</label>
+                            <textarea class="form-control" id="descripcionProducto" rows="3" required></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="precioProducto" class="form-label">Precio</label>
+                            <input type="number" step="0.01" class="form-control" id="precioProducto" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="imagenProducto" class="form-label">URL Imagen</label>
+                            <input type="text" class="form-control" id="imagenProducto" required>
+                        </div>
+                        <input type="hidden" id="productoActual">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
     <script type="module" src="../js/main.js"></script>
