--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -15,11 +15,29 @@
 <main>
     <div id="menu-container" class="container my-5"></div>
 
+
+
+  <!-- Modal Personalización HTML -->
+<div id="modalPersonalizacion" class="d-none">
+  <div class="modal-content">
+    <button id="cerrarModal" class="btn-close">&times;</button>
+    <h3 id="modal-titulo">Personaliza tu orden</h3>
+    <img id="modal-imagen" src="" alt="Producto">
+    <p id="modal-descripcion"></p>
+    <p id="modal-precio"></p>
+    <div id="modal-opciones"></div>
+    <button id="btn-confirmar" class="btn btn-cart">Agregar al carrito</button>
+  </div>
+</div>
+
+
+
     </main>
     
     <div id="footer"></div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
     <script type="module" src="../js/main.js"></script>
+    <script src="/js/personalizacion.js"></script>
 </body>
 </html>
