--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active position-relative" data-bs-interval="3000">
                 <img src="/assets/espresso-cafe1.jpeg" class="d-block w-100" alt="...">
-                <div class="text-over-button position-absolute bottom-50 start-50 translate-middle-x mb-2 ">
+                <div class=" position-absolute bottom-50 start-50 translate-middle-x mb-2 ">
                   <p class="text-white ">
                    Terminos y condiciones
                   </p>
