efectos de scrolleo

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
   <section class="container-fluid">
     <div class="container">
       <div class="row justify-content-between">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12" data-aos="fade-right">
           <h2 class="golden-sub">Nuestro</h2>
           <h2 class="green-sub">Manifiesto</h2>
           <p class="standard-p">Creemos en el poder del café como un vínculo que conecta personas, ideas y momentos. No
@@ -34,7 +35,7 @@
             humana. Cada taza que preparamos lleva el propósito de generar impacto positivo y dejar huella en quienes la
             disfrutan.</p>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12" data-aos="fade-left">
           <div class="image-container-aspect">
             <img src="/assets/aboutus.jpg" alt="nuestro manifiesto" class="img-fluid img-aboutUs">
           </div>
@@ -47,12 +48,12 @@
   <section class="container-fluid">
     <div class="container mt-5">
       <div class="row justify-content-between">
-        <div class="col-lg-6 order-2 order-md-1">
+        <div class="col-lg-6 order-2 order-md-1" data-aos="fade-right">
           <div class="image-container-aspect">
             <img src="/assets/ourstory.jpg" alt="nuestra historia" class="img-fluid img-aboutUs" />
           </div>
         </div>
-        <div class="col-lg-6 order-1 order-md-2">
+        <div class="col-lg-6 order-1 order-md-2" data-aos="fade-left">
           <h2 class="golden-sub">Nuestra</h2>
           <h2 class="green-sub">Historia</h2>
           <p class="standard-p text-justify lh-lg">
@@ -78,7 +79,7 @@
     </div>
   </section>
   <!--Sección Misión y valores-->
-  <section class="container-fluid">
+  <section class="container-fluid" data-aos="zoom-in">
     <div class="container mt-5">
       <div class="row justify-content-between align-items-baseline">
         <div class="col-lg-4 col-md-12 mb-5 text-center">
@@ -128,11 +129,11 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
-            <div class="image-container-team">
+            <div class="image-container-team" data-aos="zoom-in">
               <img src="/assets/equipo/alan.jpg" alt="Alan" />
             </div>
-            <h3 class="names-team mt-5">Alan Bañuelos</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Alan Bañuelos</h3>
+            <p class="description-team" data-aos="fade-down">
               Soy alguien orientado al logro, de pensamiento crítico y
               analítico. Me gusta aprender de todo y ser proactivo en mis
               actividades para mejorar mis resultados y habilidades. Busco
@@ -150,10 +151,10 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/equipo/AKRC.jpg" alt="AKRC" />
+              <img src="/assets/equipo/AKRC.jpg" alt="AKRC" data-aos="zoom-in">
             </div>
-            <h3 class="names-team mt-5">Karim Rangel</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Karim Rangel</h3>
+            <p class="description-team" data-aos="fade-down">
               Soy desarrollador Fullstack Jr con formación en Ciencias de la
               Computación y experiencia en desarrollo de software orientado a
               objetos. Apasionado por crear soluciones robustas tanto en
@@ -170,10 +171,10 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/equipo/betza.jpeg" alt="Betzabet" />
+              <img src="/assets/equipo/betza.jpeg" alt="Betzabet" data-aos="zoom-in">
             </div>
-            <h3 class="names-team mt-5">Betzabet Mera</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Betzabet Mera</h3>
+            <p class="description-team" data-aos="fade-down">
               Soy Desarrolladora Full Stack con formación en Ingeniería
               Biomédica. Mi formación en biomédica ha fortalecido mi capacidad
               para abordar problemas complejos con metodología y precisión,
@@ -195,11 +196,11 @@
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/equipo/raul.png" alt="Raúl" />
+              <img src="/assets/equipo/raul.png" alt="Raúl" data-aos="zoom-in">
             </div>
 
-            <h3 class="names-team mt-5">Raúl Maldonado</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Raúl Maldonado</h3>
+            <p class="description-team" data-aos="fade-down">
               Desarrollador Java Fullstack Jr., apasionado por el desarrollo
               web y con experiencia práctica en tecnologías como HTML, CSS,
               JavaScript, Bootstrap, Java y MySQL, entre otras. Me caracterizo
@@ -214,10 +215,10 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/equipo/ricardo.jpeg" alt="Ricardo" />
+              <img src="/assets/equipo/ricardo.jpeg" alt="Ricardo" data-aos="zoom-in">
             </div>
-            <h3 class="names-team mt-5">Ricardo González</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Ricardo González</h3>
+            <p class="description-team" data-aos="fade-down">
               Desarrollador Full Stack con formación en ingeniería, lo que me
               permite abordar proyectos de manera integral, trabajar en equipo
               de forma colaborativa y orientarme al cumplimiento de objetivos
@@ -230,10 +231,10 @@
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/equipo/Sergio.jpeg" alt="Sergio" />
+              <img src="/assets/equipo/Sergio.jpeg" alt="Sergio" data-aos="zoom-in">
             </div>
-            <h3 class="names-team mt-5">Sergio Morales</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Sergio Morales</h3>
+            <p class="description-team" data-aos="fade-down">
               Soy Desarrollador jr especializado en Java con experiencia
               práctica en el desarrollo de aplicaciones usando Spring Boot,
               HTML, CSS, MySQL y metodologías ágiles. Con más de 10 años de
@@ -253,10 +254,10 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
-              <img src="/assets/equipo/viviano (1).jpg" alt="Viviano" />
+              <img src="/assets/equipo/viviano (1).jpg" alt="Viviano" data-aos="zoom-in">
             </div>
-            <h3 class="names-team mt-5">Viviano Pérez</h3>
-            <p class="description-team">
+            <h3 class="names-team mt-5" data-aos="fade-down">Viviano Pérez</h3>
+            <p class="description-team" data-aos="fade-down">
               Viviano Alonso Pérez Romero es Ingeniero en Electrónica y
               Telecomunicaciones egresado de la Universidad Politécnica del
               Centro en Villahermosa, Tabasco. Cuenta con más de 6 años de
@@ -292,6 +293,10 @@
 
 
   <div id="footer"></div>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
   <script type="module" src="../js/main.js"></script>
   <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
