--- a/pages/registro.html
+++ b/pages/registro.html
@@ -46,7 +46,7 @@
                 id="firstName"
                 required
               />
-              <div class="invalid-feedback">Por favor ingresa tu nombre.</div>
+              <div class="invalid-feedback">Por favor, ingresa tu nombre.</div>
             </div>
 
             <div class="col-md-6 mb-3">
@@ -59,7 +59,7 @@
                 id="lastName"
                 required
               />
-              <div class="invalid-feedback">Por favor ingresa tu apellido.</div>
+              <div class="invalid-feedback">Por favor, ingresa tu apellido.</div>
             </div>
           </div>
 
