modificaciones en responsividad

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
           alt="..."
         />
       </div>
+
+<div
+        class="carousel-item position-relative"
+        data-bs-interval="3000"
+      >
+        <img
+          src="/assets/chilaquiles.jpg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+
     </div>
 
     <!-- ✅ Botón único, centrado al fondo -->
@@ -154,6 +166,25 @@
                       Ver más
                     </a>
                   </div>
+
+<div
+                    class="carousel-item position-relative"
+                    data-bs-interval="3000"
+                  >
+                    <img
+                      src="/assets/clientes-espresso.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <a
+                      href="/pages/acercaDe.html"
+                      class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3"
+                    >
+                      Ver más
+                    </a>
+                  </div>
+
+
                 </div>
                 <button
                   class="carousel-control-prev"
