--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
     <div class="container mt-5 mb-5">
       <div class="row justify-content-center align-items-start">
         <!-- Columna izquierda: Formulario -->
-        <div class="col-lg-6 mb-5">
+        <div class="col-lg-6 mb-5 mt-5">
           <form id="contactFormMain" class="contact-form" novalidate>
             <h2 class="contact-subtitle">Contáctanos</h2>
             <br />
