--- a/pages/registro.html
+++ b/pages/registro.html
@@ -119,10 +119,12 @@
 
     <div id="footer"></div>
 
-    
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
     <script src="../js/registro.js"></script>
-  </body>
-</html>
     <script type="module" src="../js/main.js"></script>
 </body>
 
